# ticker

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  logging.cfg  pyproject.toml  requirements.txt  stockpulpdb.sql
deployments/azure/: docker-compose.yml
deployments/local/: docker-compose.yml
docs/: Contributing.md
tests/: ticker_test.py
ticker/: __init__.py  __main__.py
