[tool.poetry]
name = "ticker"
version = "0.1.0"
description = "A service that proxies external stock market and crypto currency APIs"
authors = ["Alex Spina <alexmspina@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
flask = "*"
python-json-logger = "*"
gunicorn = "*"
toml = "^0.10.2"
Flask-Cors = "^3.0.10"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pylint = "^2.8.2"
black = "^21.5b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
